--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   
   # Utilities
   intl: ^0.18.1
+  
+  # Google APIs for FCM V1
+  googleapis: ^11.0.0
+  googleapis_auth: ^1.4.1
 
 dev_dependencies:
   flutter_test:
